--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     box-sizing: border-box;
     padding:0;
@@ -15,6 +17,11 @@
     position: relative;
     top: 20px;
 }
+h1,h2,h3,h4,h5,h6
+{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
 #header-font
 {
     color:#ff5b00 ;
@@ -26,9 +33,8 @@
 }
 #header-menu
 {
-    padding-top: 20px;
-    border-top: 2px solid green;
-    border-bottom: 2px solid green;
+  padding-top: 0px;
+  border-bottom: 1px solid green;
 }
 
 #icon-header
@@ -48,6 +54,7 @@ body
     background-image:url("assets/img/ppstern2.jpg");
     background-repeat: repeat;
     padding: 0px 60px 60px 60px;
+    border-bottom: 1px solid yellowgreen;
 }
 .nav-item .nav-link
 {
@@ -55,18 +62,21 @@ body
 }
 .navbar-light .navbar-nav .nav-link
 {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color:#030303 !important;
     font-size: 16px;  
-    text-indent:38px;
+    font-weight:500;
+    text-indent: 20px;
+}
+#main_navbar
+{
+  margin-top: -31px;
+  padding-bottom: 2%;
 }
 .navbar-light .navbar-nav .nav-link:hover
 { 
-    
     color:#ff5b00 !important;
-    font-size: 16px;
-    text-indent:38px;
-    -ms-transform: scale(1.1); /* IE 9 */
-    transform: scale(1.1);
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active
 {
@@ -79,6 +89,28 @@ body
 {
   content:'*';
   margin-right: 3px;
+}
+span
+{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+}
+#logo-fontfamilly
+{
+  max-width:270px;
+  height: auto;
+}
+#logo-footer
+{
+  max-width: 270px;
+  height: auto;
+  margin-top: 17%;
+}
+#header-10
+{
+  position: relative;
+  left: 350px;
 }
 .nav-item .nav-link
 {
@@ -93,13 +125,23 @@ body
   padding:1%;
   font-size: 16px;
 }
+#dream-startz
+{
+  margin-top: 100px;
+}
 .goog-te-gadget .goog-te-combo
 {
   margin: 26px 0;
 }
+p
+{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
+}
 .padd-1
 {
-    padding-top: 18px;
+  padding-top: 44px;
 }
 .padd-2
 {
@@ -136,6 +178,22 @@ body
     background-position:center;
     background-repeat:no-repeat;
     height:60vh;
+}
+#icon-size
+{
+    font-size: 35px;
+    position: absolute;
+    left: 25px;
+    top: 40px;
+    color: #ffffff;
+}
+#icon-size1
+{
+    font-size: 35px;
+    position: absolute;
+    left: 25px;
+    top: 132px;
+    color: #ffffff;
 }
 #box--1
 {
@@ -202,7 +260,6 @@ padding-bottom:20px;
     padding-bottom: 5px;
     padding-right: 15px;
     padding-left: 15px;
-    background: #ff5b00;
     border-top-left-radius:10px;
 }
 .absoloute-2
@@ -213,7 +270,6 @@ padding-bottom:20px;
     padding-bottom: 3px;
     padding-right: 5px;
     padding-left: 5px;
-    background: #ff5b00;
 }
 .absoloute-3
 {
@@ -224,7 +280,6 @@ padding-bottom:20px;
     padding-bottom: 5px;
     padding-right: 15px;
     padding-left: 15px;
-    background: #ff5b0059;
 }
 #ad
 {
@@ -275,9 +330,9 @@ padding-bottom:20px;
 }
 #footer-menu
 {
-  background-color: #16202a;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  background-color: #14406c;
+  padding-top:50px;
+  padding-bottom:20px;
 }
 #footer-menu-1
 {
@@ -288,6 +343,16 @@ padding-bottom:20px;
 #clients
 {
   padding-bottom: 60px;
+}
+#next-addition
+{
+  background:linear-gradient(359deg,#87828285,#0000007d),url(../img/cinema_effect.jpg);
+  padding-bottom: 43px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  padding-bottom: 43px;
 }
 #select
 {
@@ -323,8 +388,6 @@ padding-bottom:20px;
     position: absolute;
     width: 68%;
     height: 106%;
-    background-color: #db6406a1;
-    transition: 1s;
     z-index: 1;
     padding: 10px;
   }
@@ -414,27 +477,23 @@ padding-bottom:20px;
   }
   .muted-1
   {
-    font-weight: 100;
     font-size: 14px;
-    color: #000000cf;
   }
   .muted-2
   {
-    font-weight: 100;
     font-size: 14px;
     padding-left:13px;
     color: #000000cf;
   }
   .muted-3
   {
-    font-weight: 100;
+
     font-size: 14px;
     padding-left:34px;
     color: #000000cf;
   }
   .muted-4
   {
-    font-weight: 100;
     font-size: 14px;
     padding-left:52px;
     color: #000000cf;
@@ -443,7 +502,7 @@ padding-bottom:20px;
   {
     font-weight: 600;
     font-size: 14px;
-    color: #939292;
+    color: #343030;
   }
   #btn-sm
   {
